update (NO TOCAR NADA DE PEDIDO)