@@ -7,9 +7,7 @@ import org.springframework.stereotype.Service;
 
 import SNAKE_PC.demo.model.producto.Categoria;
 import SNAKE_PC.demo.model.producto.ProductoCategoria;
-import SNAKE_PC.demo.repository.producto.CategoriaRepository;
 import SNAKE_PC.demo.repository.producto.ProductoCategoriaRepository;
-
 import jakarta.transaction.Transactional;
 
 @SuppressWarnings("null")
@@ -20,8 +18,8 @@ public class ProductoCategoriaService {
     @Autowired
     private ProductoCategoriaRepository productoCategoriaRepository;
 
-    @Autowired
-    private CategoriaRepository categoriaRepository;
+    @Autowired 
+    private CategoriaService categoriaService;
 
     public List<ProductoCategoria> buscarTodos() {
         return productoCategoriaRepository.findAll();
@@ -35,38 +33,30 @@ public class ProductoCategoriaService {
         return productoCategoria;
     }
 
-    public ProductoCategoria guardarProductoCategoria(ProductoCategoria productoCategoria, Long idCategoria) {
-
-        if (productoCategoria.getNombreSubcategoria() == null
-                || productoCategoria.getNombreSubcategoria().isBlank()) {
+    public ProductoCategoria guardarProductoCategoria(String nombreSubCategoria, String nombreCategoria) {
+        if (nombreSubCategoria == null|| nombreSubCategoria.trim().isEmpty()) {
             throw new RuntimeException("El nombre de la subcategoría no puede estar vacío.");
         }
 
-        Categoria categoria = categoriaRepository.findById(idCategoria)
-                .orElseThrow(() -> new RuntimeException("Categoría no encontrada."));
-
-        productoCategoria.setCategoria(categoria);
-
-        return productoCategoriaRepository.save(productoCategoria);
+        Categoria productoCategoria = categoriaService.guardarCategoria(nombreCategoria);
+ 
+        ProductoCategoria nuevoProductoCategoria = new ProductoCategoria();
+        nuevoProductoCategoria.setCategoria(productoCategoria);
+        nuevoProductoCategoria.setNombreSubCategoria(nombreSubCategoria);
+        return productoCategoriaRepository.save(nuevoProductoCategoria);
+       
     }
 
-    public ProductoCategoria actualizarProductoCategoria(Long id, ProductoCategoria productoCategoria,
-            Long idCategoria) {
-
-        ProductoCategoria existente = productoCategoriaRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("ProductoCategoria no encontrada."));
-
-        if (productoCategoria.getNombreSubcategoria() != null
-                && !productoCategoria.getNombreSubcategoria().isBlank()) {
-            existente.setNombreSubcategoria(productoCategoria.getNombreSubcategoria());
+    public ProductoCategoria actualizarProductoCategoria(String nombreSubCategoria, String nombreCategoria ) {
+        ProductoCategoria existente = productoCategoriaRepository.findByNombreSubCategoria(nombreSubCategoria)
+                .orElseThrow(() -> new RuntimeException("ProductoCategoria no encontrada."));  
+        if (nombreSubCategoria != null && !nombreSubCategoria.trim().isEmpty()) {
+            existente.setNombreSubCategoria(nombreSubCategoria.trim());
         }
-
-        if (idCategoria != null) {
-            Categoria categoria = categoriaRepository.findById(idCategoria)
-                    .orElseThrow(() -> new RuntimeException("Categoría no encontrada."));
+        if (nombreCategoria != null) {
+            Categoria categoria = categoriaService.guardarCategoria(nombreCategoria);
             existente.setCategoria(categoria);
         }
-
         return productoCategoriaRepository.save(existente);
     }
 
